--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon app.js"
   },
   "author": "",
-  "type":"module",
+  "type": "module",
   "license": "ISC",
   "description": "",
   "dependencies": {
@@ -19,7 +19,9 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mailtrap": "^3.4.0",
-    "mongoose": "^8.10.0"
+    "mailtrap-sdk": "^1.0.1",
+    "mongoose": "^8.10.0",
+    "nodemailer": "^6.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
